[package]
name = "rtorrent-exporter"
version = "0.1.0"
authors = ["Pavel Borzenkov <pavel@borzenkov.net>"]
edition = "2021"
license = "MIT"
description = "Prometheus exporter for RTorrent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
prometheus-client = "0.22"
reqwest = "0.11"
rtorrent-xmlrpc-bindings = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
warnings = "deny"
